<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corner_bg_one"
                android:gravity="center"
                android:layout_gravity="center">


    <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/oswald_regular"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:textAllCaps="true"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_14sdp" />


    <TextView
            android:id="@+id/title_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleText"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/oswald_regular"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/delete_desc"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_14sdp" />


    <LinearLayout
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_desc"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

        <Button
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textColor="@color/color_white"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/oswald_regular"
                android:background="@drawable/oval_corner_bg_one" />

        <Button
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_weight="1"
                android:text="@string/no"
                android:layout_marginEnd="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/oswald_regular"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/oval_corner_bg_two"/>
    </LinearLayout>

</RelativeLayout>