<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@color/color_white">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_16sdp"
                android:fontFamily="@font/gotham_medium" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp">

            <NumberPicker
                    android:id="@+id/picker_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:descendantFocusability="blocksDescendants"
                    android:visibility="gone"
                    tools:ignore="RtlCompat"/>

            <NumberPicker
                    android:id="@+id/picker_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cancelBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/gotham_medium"
                    android:layout_weight="1"
                    android:gravity="center"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/okBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/ok"
                    android:textAllCaps="true"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/gotham_medium"
                    android:layout_weight="1"
                    android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>